--- a/styles.css
+++ b/styles.css
@@ -9,6 +9,36 @@ html, body, #app {
 providing a space for you to apply styles to your app's outermost HTML element - the #app itself. */
 
 #app {
-  background-color: green;
-  color: yellow;
+  background-color: white;
+  color: black;
 }
+
+.tweet-box {
+  border: 5px solid grey;
+  border-width: thin;
+  padding: 7px;
+  margin: 5px;
+}
+
+.profile-photo {
+
+}
+
+.username {
+
+}
+
+.message {
+
+}
+
+.timestamp {
+
+}
+
+.icon {
+
+}
+
+
+
