--- a/styles.css
+++ b/styles.css
@@ -51,6 +51,7 @@ providing a space for you to apply styles to your app's outermost HTML element -
   grid-row-start:3;
   height: 300px;
   padding: 6px;
+  font-family: 'Roboto', sans-serif;
   font-size: 18px;
   color: grey;
   text-align:left;
